# imu_to_odom

./: CMakeLists.txt  package.xml
include/imu_to_odom/: imu_to_odom.h  imu_to_odom_predictor.h
include/kindr/minimal/: angle-axis.h  common.h  position.h  quat-sim-transform.h  quat-transformation.h  rotation-quaternion.h  transform-2d.h
include/kindr/minimal/implementation/: angle-axis-inl.h  quat-sim-transform-inl.h  quat-transformation-inl.h  rotation-quaternion-inl.h  transform-2d-inl.h
include/minkindr_conversions/: kindr_msg.h  kindr_tf.h  kindr_xml.h
launch/: imu_demo.launch  imu_to_odom.launch
src/: diffwheel_to_odom_chatgpt.cpp  imu_to_odom_chatgpt.cpp  imu_to_odom_node.cpp  imu_to_odom_predictor.cpp
urdf/: plane.urdf.xacro
